@@ -51,11 +51,19 @@ bool mouseCB(void *p,void* ud)
 
 int main(int argc, char **argv)
 {
+	windowInitStruct *win;
 	int						sy=0;
 	std::vector<hitRect>	hrs;
 	
 	apc=new LFSTK_applicationClass();
-	apc->LFSTK_addWindow(NULL,BOXLABEL,"LFSTKExample");
+
+	win=apc->LFSTK_getDefaultWInit();
+	win->windowName=BOXLABEL;
+	//win->windowType=win->app->appAtomsHashed.at(LFSTK_UtilityClass::LFSTK_hashFromKey("_NET_WM_WINDOW_TYPE_DIALOG"));
+	win->level=NORMAL;
+	apc->LFSTK_addWindow(win,BOXLABEL);
+
+	//apc->LFSTK_addWindow(NULL,BOXLABEL,"LFSTKExample");
 	wc=apc->mainWindow;
 
 	multi=new LFSTK_ExpanderGadgetClass(wc,"",0,0,DIALOGWIDTH,GADGETHITE*3);
